adding my new site

--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
-<!DOCTYPE html>
-<!-- saved from url=(0050)file:///Users/aweir1/Sites/acwcreations/index.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<title>London Inspirations</title>
-</head>
-<!--This is a comment to start the page here -->
-
+<!	DOCTYPE HTML>
+<html>
+<head>
+	<title>Geek Chic Digital</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/gcdstyle.css">
+	<script src="my_script.js"> </script>
+	<! --this element can go anywhere any where in the document. Browser will stop to load the script so if it is in the head, it may take a while to load the page-->
+	</head>
 <body>
-<h1> Words to Love </h1>
-<p class="intro">There are few people whom I really love, and still fewer of whom I think well. The more I see of the world, the more am I dissatisfied with it; and every day confirms my <strong>belief of the inconsistency of all human characters </strong>, and of the little dependence that can be placed on the appearance of merit or sense </p>
+	<header>
+		<div class="navbar">
+		<ul>
+			<li>LOGO</Li>
+			<li>ABOUT</li>
+			<li>SHOWCASE</li>
+			<li>JOURNAL</li>
+			<li>CONTACT</li>
+		</ul>
+	</div>
+	</header>
+	<div class="middlesection">
+		<div id="homeimage">image will go here</div>
+		<div id="hometext"> welcome text will go here</div>
+		<! --make these divs instead of spans -->
+	</div>
+	<footer>
+		<ul>
+		<li>facebook</li>
+		<li>linkedin</li>
+		</ul>
+	</footer>
+</body>
 
-<h2>Amanda in London</h2>
-
-<section class="list">
-<ul>
-	<li>Buckingham Palace</li>
-	<li>Big Ben</li> 
-	<li>Westiminster Abby </li>
-</ul>
-<ol>
-	<li>Buckingham Palace</li>
-	<li>Big Ben</li> 
-	<li>Westiminster Abby </li>
-</ol>
-</section>
-
-<img src="./london_files/london.jpg" alt="placeholder image">
-
-
-
-<!-- <hr> -->
-
-</body></html>
+</html
