updaetd html file that is linked to new css file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Geek Chic Digital</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/gcdstyle.css">
+	<link rel="stylesheet" href="css/styleme.css">
 	<script src="my_script.js"> </script>
 	<! --this element can go anywhere any where in the document. Browser will stop to load the script so if it is in the head, it may take a while to load the page-->
 	</head>
