--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!	DOCTYPE HTML>
 <html>
 <head>
-	<title>Geek Chic Digital</title>
+	<title>Holler Tail</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/styleme.css">
 	<script src="my_script.js"> </script>
@@ -9,26 +9,41 @@
 	</head>
 <body>
 	<header>
+		<div class="logo">
+			LOGO
+		</div>
 		<div class="navbar">
-		<ul>
-			<li>LOGO</Li>
-			<li>ABOUT</li>
-			<li>SHOWCASE</li>
-			<li>JOURNAL</li>
-			<li>CONTACT</li>
+		<ul class="navlinks">
+			<li>his closet</li>
+			<li>her closet</li>
+			<li>my home</li>
+			<li>sale</li>
+			<li>blog</li>
+			<li>about</li>
 		</ul>
 	</div>
 	</header>
-	<div class="middlesection">
-		<div id="homeimage">image will go here</div>
-		<div id="hometext"> welcome text will go here</div>
+	<div class="mainimage">image will go here</div>
+	<div class="fproduct"> welcome text will go here</div>
+	<div class="ourface"> face images will go here" </div>
 		<! --make these divs instead of spans -->
-	</div>
 	<footer>
-		<ul>
+			<div class="sociallinks">
+	<ul>
 		<li>facebook</li>
-		<li>linkedin</li>
+		<li>pinterest</li>
+		<li>instagram</li>
+	</ul>
+	</div>
+		<div class="corplinks">
+		<ul>
+		<li>about</li>
+		<li>faq</li>
+		<li>contact</li>
+		<li>press</li>
+		<li>careers</li>
 		</ul>
+	</div>
 	</footer>
 </body>
 
