--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!	DOCTYPE HTML>
 <html>
 <head>
-	<title>Holler Tail</title>
+	<title>Nerd En Vogue</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/styleme.css">
 	<script src="my_script.js"> </script>
@@ -10,16 +10,20 @@
 <body>
 	<header>
 		<div class="logo">
-			LOGO
+			<p id="logofont">
+				nerd en vogue
+			</p>
+			<p id="subtitle">
+				"the digital ramblings & creations of a fashion professional turned coder"
+			</p>
 		</div>
 		<div class="navbar">
 		<ul class="navlinks">
-			<li>his closet</li>
-			<li>her closet</li>
-			<li>my home</li>
-			<li>sale</li>
-			<li>blog</li>
 			<li>about</li>
+			<li>portfolio</li>
+			<li><a href="http://nerdenvogue.blogspot.com/">blog</a></li>
+			<li>contact</li>
+			<li>shop</li>
 		</ul>
 	</div>
 	</header>
