--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!	DOCTYPE HTML>
 <html>
 <head>
-	<title>Nerd En Vogue</title>
+	<title>the sassiest</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/styleme.css">
 	<script src="my_script.js"> </script>
@@ -9,46 +9,27 @@
 	</head>
 <body>
 	<header>
-		<div class="logo">
-			<p id="logofont">
-				nerd en vogue
-			</p>
-			<p id="subtitle">
-				"the digital ramblings & creations of a fashion professional turned coder"
-			</p>
+		<div class="topimage">
+			image
 		</div>
-		<div class="navbar">
+		<container class="navbar">
 		<ul class="navlinks">
-			<li>about</li>
-			<li>portfolio</li>
-			<li><a href="http://nerdenvogue.blogspot.com/">blog</a></li>
-			<li>contact</li>
-			<li>shop</li>
+			<li>home</li>
+			<li>they're story</li>
+			<li>the wedding</li>
+			<li id="logofont">andrew&tiffany</li>
+			<li>photos</li>
+			<li>guestbook</li>
+			<li>resgistry</li>
 		</ul>
-	</div>
+	</container>
 	</header>
-	<div class="mainimage">image will go here</div>
-	<div class="fproduct"> welcome text will go here</div>
-	<div class="ourface"> face images will go here" </div>
-		<! --make these divs instead of spans -->
 	<footer>
-			<div class="sociallinks">
-	<ul>
-		<li>facebook</li>
-		<li>pinterest</li>
-		<li>instagram</li>
-	</ul>
-	</div>
-		<div class="corplinks">
-		<ul>
-		<li>about</li>
-		<li>faq</li>
-		<li>contact</li>
-		<li>press</li>
-		<li>careers</li>
-		</ul>
-	</div>
 	</footer>
 </body>
 
 </html
+
+
+<! --find flexbox-->
+
