--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
 	</head>
 <body>
 	<header>
-		<div class="topimage">
-			image
-		</div>
 		<container class="navbar">
-		<ul class="navlinks">
+		<ul class="navlinks	">
 			<li>home</li>
 			<li>they're story</li>
 			<li>the wedding</li>
@@ -22,6 +19,15 @@
 			<li>guestbook</li>
 			<li>resgistry</li>
 		</ul>
+		<div class="topimage">
+			<img src="css/images/tatree.jpg" alt="tiffandrew">
+		</div>
+		<div class="married">
+			<p id="date">
+				June 11th, 2016
+			</p>
+		</div>
+
 	</container>
 	</header>
 	<footer>
