--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 			<img src="css/images/tatree.jpg" alt="tiffandrew">
 		</div>
 		<div class="married">
+			<p id="phrase">
+				We're getting married!
+			</p>
 			<p id="date">
 				June 11th, 2016
 			</p>
