a lot of changes

--- a/index.html
+++ b/index.html
@@ -9,30 +9,24 @@
 	</head>
 <body>
 	<header>
+		<container class="topimage">
+			<img src="css/images/tatree.jpg" alt="tiffandrew">
+		</container>
 		<container class="navbar">
 		<ul class="navlinks	">
 			<li>home</li>
 			<li>they're story</li>
 			<li>the wedding</li>
-			<li id="logofont">andrew&tiffany</li>
+			<li id="logofont">andrew♥tiffany</li>
 			<li>photos</li>
 			<li>guestbook</li>
 			<li>resgistry</li>
 		</ul>
-		<div class="topimage">
-			<img src="css/images/tatree.jpg" alt="tiffandrew">
-		</div>
-		<div class="married">
-			<p id="phrase">
-				We're getting married!
-			</p>
-			<p id="date">
-				June 11th, 2016
-			</p>
-		</div>
-
 	</container>
 	</header>
+	<! --comment out until css is corrected
+		<div class="married"
+		</div>
 	<footer>
 	</footer>
 </body>
