moved image and header, added text area

--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 	</head>
 <body>
 	<header>
-		<container class="topimage">
-			<img src="css/images/tatree.jpg" alt="tiffandrew">
 		</container>
 		<container class="navbar">
 		<ul class="navlinks	">
-			<li>home</li>
-			<li>they're story</li>
+			<li><a href="index.html">home</a></li>
+			<li><a href="#story">they're story</li>
 			<li>the wedding</li>
 			<li id="logofont">andrew♥tiffany</li>
 			<li>photos</li>
@@ -24,9 +22,13 @@
 		</ul>
 	</container>
 	</header>
-	<! --comment out until css is corrected
-		<div class="married"
-		</div>
+	<container class="topimage">
+			<img src="css/images/tatree.jpg" alt="tiffandrew">
+	<div clas="bump">
+	</div>
+	<div id="story">
+		<p> our story here </p>
+	</div>
 	<footer>
 	</footer>
 </body>
