back to where is tarted

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 	<! --this element can go anywhere any where in the document. Browser will stop to load the script so if it is in the head, it may take a while to load the page-->
 	</head>
 <body>
-	<header>
-		</container>
-		<container class="navbar">
-		<ul class="navlinks	">
+	<header class=topimage>
+	<container class="navbar">
+		<ul class="navlinks">
 			<li><a href="index.html">home</a></li>
 			<li><a href="#story">they're story</li>
 			<li>the wedding</li>
@@ -21,9 +20,9 @@
 			<li>resgistry</li>
 		</ul>
 	</container>
+		<img src="css/images/tatree.jpg" alt="tiff and andrew">
 	</header>
-	<container class="topimage">
-			<img src="css/images/tatree.jpg" alt="tiffandrew">
+		</container>
 	<div clas="bump">
 	</div>
 	<div id="story">
